--- a/include/css/overlay-credits.css
+++ b/include/css/overlay-credits.css
@@ -3,8 +3,9 @@
   top: 0;
   right: 0;
   width: 57%;
-  height: calc(100% - 3.4rem);
-  background-color: rgba(34, 66, 124, 0.4);  
+  max-width: 700px;
+  height: calc(100% - 5rem);
+  background-color: rgba(255, 255, 255, 0.9);  
   z-index: 9999;
   transform: translateX(100%); 
   transition: transform 0.3s ease-in-out;
@@ -13,8 +14,8 @@
   align-items: center;
   padding-top: 1rem;
   border-radius: 8px;
-  backdrop-filter: blur(10px); 
-  -webkit-backdrop-filter: blur(10px); 
+  backdrop-filter: blur(5px); 
+  -webkit-backdrop-filter: blur(5px); 
   overflow: hidden; 
 }
 
@@ -30,7 +31,7 @@
   height: 100%;  
   display: flex;
   flex-direction: column;  
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 }
 
 #credits-overlay h2 {
@@ -74,7 +75,7 @@
 }
 
 .overlay-content h2 {
-  color: white;
+  color: #000000;
   display: flex;
   justify-content: center;
   font-weight: bold;
@@ -82,19 +83,19 @@
 }
 
 .overlay-content p {
-  color: white;
+  color: #000000;
 }
 
 .overlay-content a {
   text-decoration: none;
-  color: white;
+  color: #56739A;
   font-weight: bold;
   padding-left: 1rem;
   margin-bottom: 0.5rem;
 }
 
 .overlay-content span {
-  color: white;
+  color: #56739A;
   font-weight: bold;
   padding-left: 1rem;
 }
@@ -162,11 +163,11 @@
 
 hr {
     width: 100%;
-    color: white;
+    color: #000000;
     padding: 0;
     margin: 0;
-    background: white;
-    border-color: white;
+    background: #000000;
+    border-color: #000000;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
@@ -226,6 +227,7 @@ hr {
         bottom: 40px;
         left: auto;
         width: 100%;
+        max-width: none;
         transform: translateX(100%);  
     }
     
@@ -269,4 +271,3 @@ hr {
     }
 
 }
-
